tempo/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo
  namespace: tempo
spec:
  replicas: 1
  podManagementPolicy: OrderedReady
  serviceName: tempo-headless
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: tempo
          image: index.docker.io/grafana/tempo:1.3.1
          command: ['/tempo']
          args:
            - "-config.file=/etc/tempo/tempo.yaml"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tempo-config
              mountPath: /etc/tempo
          ports:
            - containerPort: 3100
